fix: our founder spacing

--- a/packages/client/src/assets/scss/components/_ourfounder.scss
+++ b/packages/client/src/assets/scss/components/_ourfounder.scss
@@ -1,10 +1,6 @@
 .our-founder {
   position: relative;
-  padding: 300px 0 100px;
-  @media (max-width: 1399.98px) {
-    padding: 200px 0 100px;
-  }
-
+  padding: 200px 0 100px;
   @media (max-width: 1000px) and (min-width: 767px) {
     padding: 200px 0 80px;
   }
@@ -15,6 +11,7 @@
     padding: 50px 0 0px;
   }
   .section-title {
+    padding: 66px 0 0;
     h1 {
       margin: 0 !important;
     }
